<resources>
    <string name="app_name">Gallery</string>

    <string name="action_settings">Settings</string>
    <string name="action_increase_columns">Add column</string>
    <string name="action_decrease_columns">Remove column</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_details">Details</string>
    <string name="action_about">About</string>
    <string name="action_rename">Rename</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>

    <string name="desc_folder">Folder thumbnail</string>
    <string name="desc_image">Image thumbnail</string>
    <string name="desc_full_image">Full image</string>
    <string name="desc_check" translatable="false">Check</string>
    <string name="desc_overlay">Video overlay</string>

    <string name="title_activity_folder">Folder</string>
    <string name="title_activity_image">Image</string>
    <string name="title_activity_video">Video</string>
    <string name="title_activity_about">About</string>

    <string name="no_images">The folder is empty!</string>
    <string name="no_media">No media found :(</string>

    <string name="delete_ok">Yes</string>
    <string name="delete_no">No</string>
    <string name="delete_title">Warning!</string>
    <string name="delete_message">This will delete the file forever, are you sure?</string>

    <string name="details_image">Image details</string>
    <string name="details_video">Video details</string>
    <string name="details_name_title">Name</string>
    <string name="details_path_title">Path</string>
    <string name="details_size_title">Size</string>
    <string name="details_type_title">Type</string>
    <string name="details_modified_title">Modified</string>

    <string name="rename_rename">Rename file</string>
    <string name="rename_old_name">Old name</string>
    <string name="rename_new_name">New name</string>

    <string name="about_name">Gallery version:</string>
    <string name="about_developed">Developed by:</string>
    <string name="about_developer" translatable="false">Systemallica</string>
    <string name="about_library">Libraries used:</string>
    <string name="about_library1" translatable="false">Glide</string>
    <string name="about_library2" translatable="false">Subsampling-scale-image-view</string>
    <string name="about_library3" translatable="false">Exoplayer</string>
    <string name="about_contact">Contact:</string>
    <string name="about_email" translatable="false">systemallica.apps@gmail.com</string>
    <string name="about_rate">Tap here to rate the app!</string>
</resources>
