<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.systemallica.gallery.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_increase_column"
        android:orderInCategory="101"
        android:title="@string/action_increase_columns"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_decrease_column"
        android:orderInCategory="102"
        android:title="@string/action_decrease_columns"
        app:showAsAction="never" />
</menu>
